evaluation-run/564/k8s/prod/account-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api
  namespace: rrb-app
  labels:
    app: account-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-api
  template:
    metadata:
      labels:
        app: account-api
    spec:
      containers:
        - name: account-api
          image: ralfx22/rrb-account-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
