evaluation-run/564/k8s/prod/notification-api-kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-kafka
  namespace: rrb-app
  labels:
    app: notification-api-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api-kafka
  template:
    metadata:
      labels:
        app: notification-api-kafka
    spec:
      containers:
        - name: notification-api-kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
              protocol: TCP
            - containerPort: 29092
              protocol: TCP
            - containerPort: 29093
              protocol: TCP
      restartPolicy: Always
