evaluation-run/564/k8s/prod/transaction-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api
  namespace: rrb-app
  labels:
    app: transaction-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: transaction-api
